<resources>
    <string name="app_name">ContactList</string>
    <string name="Bouton_1">Valider</string>
    <string name="selectall">Selectionner Tout</string>
    <string name="bouton_validation">Validation</string>
    <string name="bouton_annulation">Annulation</string>
    <string name="changename">Changer un nom</string>
    <string name="bouton_terminer">Terminer</string>
    <string name="valider">Valider</string>
    <string name="textActivity">Vous avez selectionné:</string>
    <string name="messageContact">Message à envoyer aux contacts:</string>
    <string name="dialog_message">Voulez-vous envoyer ce message?</string>
    <string name="dialog_title">Validation d\'envoi</string>
    <string name="ok">Envoyer</string>
    <string name="cancel">Annuler</string>
    <string name="select_new_name">Choisir un nouveau nom</string>
    <string name="remplacement">Nom de remplacement pour le contact...</string>
    <string name="prenomText">Modification du prénom</string>
    <string name="modifier">Modifier</string>
</resources>
