<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ValidationActivity">


    <TextView
        android:id="@+id/RecapContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/textActivity"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecapContact">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wishList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/recapMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/messageContact"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Button
        android:id="@+id/bouton_annulation"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/bouton_annulation"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollCustom"
        app:layout_constraintVertical_bias="0.578" />

    <Button
        android:id="@+id/bouton_validation"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/bouton_validation"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorPrimaryDark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollCustom"
        app:layout_constraintVertical_bias="0.578" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/scrollCustom"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/listPadding"
        android:padding="@dimen/listPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recapMessage" />

    <Button
        android:id="@+id/modifierPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:paddingLeft="@dimen/textviewMargin"
        android:paddingRight="@dimen/textviewMargin"
        android:text="@string/changename"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollCustom"
        app:layout_constraintVertical_bias="0.578" />

</android.support.constraint.ConstraintLayout>
